Use relative paths in build.ninja and build.ninja.d

BUG=787223
R=dpranke@chromium.org

Change-Id: I1c3aada842bba899c20d5e2c1b0dceb818f118d2